# rs7

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DATATYPE_VALIDATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  NEW_SCHEMAS_SUMMARY.md  PERFORMANCE.md  PHARMACY_SCHEMAS_SUMMARY.md  README.md  RELEASE_NOTES_0.1.1.md  RELEASE_NOTES_v0.4.0.md  ROADMAP.md  SCHEMA_COMPLETION.md  SCHEMA_UPDATE_SUMMARY.md  SESSION_HISTORY.md  VOCABULARY_VALIDATION_SUMMARY.md  test_pid.rs
crates/rs7-cli/: Cargo.toml  README.md
crates/rs7-cli/examples/: sample_adt.hl7  sample_oru.hl7
crates/rs7-cli/src/: main.rs
crates/rs7-conformance/: Cargo.toml  README.md
crates/rs7-conformance/examples/: basic_validation.rs  predicate_validation.rs  xml_parser_demo.rs
crates/rs7-conformance/profiles/: sample_adt_a01.xml
crates/rs7-conformance/src/: error.rs  lib.rs  predicate.rs
crates/rs7-conformance/src/profile/: mod.rs  parser.rs
crates/rs7-conformance/src/validator/: mod.rs  result.rs
crates/rs7-conformance/tests/: integration_test.rs
crates/rs7-core/: Cargo.toml  README.md
crates/rs7-core/examples/: query_response.rs
crates/rs7-core/src/: batch.rs  delimiters.rs  encoding.rs  error.rs  field.rs  lib.rs  message.rs  segment.rs  types.rs
crates/rs7-core/src/builders/: ack.rs  adt.rs  batch.rs  dft.rs  fields.rs  laboratory.rs  mdm.rs  mod.rs  orm.rs  oru.rs  pharmacy.rs  qbp.rs  qry.rs  rsp.rs  siu.rs
crates/rs7-custom/: Cargo.toml  README.md
crates/rs7-custom/examples/: component_fields.rs  datetime_fields.rs  field_types.rs  message_manipulation.rs  real_world_adt.rs  repeating_components.rs  repeating_fields.rs  zcu_customer_segment.rs  zpv_visit_segment.rs
crates/rs7-custom/src/: error.rs  lib.rs  macros.rs  message_ext.rs  registry.rs  segment.rs
crates/rs7-custom/tests/: integration_tests.rs
crates/rs7-fhir/: CONVERTERS.md  Cargo.toml  EXAMPLES.md  README.md  TERSER_INDEXING.md
crates/rs7-fhir/examples/: convert_adt.rs  convert_oml.rs  convert_orm.rs  convert_oru.rs  convert_vxu.rs
crates/rs7-fhir/src/: error.rs  lib.rs
crates/rs7-fhir/src/converters/: allergy_intolerance.rs  condition.rs  diagnostic_report.rs  encounter.rs  immunization.rs  medication.rs  mod.rs  observation.rs  patient.rs  practitioner.rs  procedure.rs  service_request.rs  specimen.rs
crates/rs7-fhir/src/resources/: allergy_intolerance.rs  common.rs  condition.rs  diagnostic_report.rs  encounter.rs  immunization.rs  medication.rs  mod.rs  observation.rs  patient.rs  practitioner.rs  procedure.rs  service_request.rs  specimen.rs
crates/rs7-http/: Cargo.toml  README.md
crates/rs7-http/examples/: advanced_client.rs  advanced_server.rs  http_client.rs  http_server.rs
crates/rs7-http/src/: auth.rs  batch.rs  client.rs  error.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  queue.rs  ratelimit.rs  retry.rs  router.rs  server.rs  testing.rs  tls.rs  webhook.rs  websocket.rs
crates/rs7-macros/: Cargo.toml  README.md
crates/rs7-macros/src/: lib.rs
crates/rs7-macros/tests/: derive_tests.rs
crates/rs7-mllp/: Cargo.toml  README.md
crates/rs7-mllp/src/: lib.rs  pool.rs  router.rs  testing.rs  tls.rs
crates/rs7-mllp/tests/: test_certs.rs  tls_integration.rs
crates/rs7-orchestration/: Cargo.toml  README.md
crates/rs7-orchestration/examples/: filtering_example.rs  routing_example.rs  workflow_example.rs
crates/rs7-orchestration/src/: error.rs  filtering.rs  lib.rs  orchestration.rs  routing.rs
crates/rs7-parser/: Cargo.toml  README.md
crates/rs7-parser/benches/: industry_bench.rs  parser_bench.rs
crates/rs7-parser/src/: config.rs  lib.rs  optimized.rs  streaming.rs
crates/rs7-templates/: Cargo.toml  README.md
crates/rs7-templates/src/: engine.rs  error.rs  inheritance.rs  lib.rs  library.rs  parser.rs  template.rs  validation.rs
crates/rs7-terser/: Cargo.toml  README.md
crates/rs7-terser/benches/: terser_bench.rs
crates/rs7-terser/src/: bulk.rs  cache.rs  groups.rs  iterator.rs  lib.rs  path.rs  query.rs  query_result.rs
crates/rs7-testpanel/: Cargo.toml  build.rs
crates/rs7-testpanel/src/: app.rs  logo.rs  main.rs  samples.rs  utils.rs
crates/rs7-testpanel/src/tabs/: builder.rs  fhir.rs  mllp.rs  mod.rs  parser.rs  terser.rs  validator.rs  xml.rs
crates/rs7-transform/: Cargo.toml  README.md
crates/rs7-transform/src/: config.rs  error.rs  lib.rs  rule.rs  transformer.rs  transforms.rs
crates/rs7-validator/: Cargo.toml  README.md
crates/rs7-validator/schemas/: README.md
crates/rs7-validator/schemas/v2_3/: ACK.json  ADT_A01.json  ADT_A02.json  ADT_A03.json  ADT_A04.json  ADT_A05.json  ADT_A06.json  ADT_A07.json  ADT_A08.json  ADT_A09.json  ADT_A10.json  ADT_A11.json  ADT_A12.json  ADT_A13.json  ADT_A17.json  ADT_A28.json  ADT_A31.json  ADT_A40.json  BAR_P01.json  BAR_P02.json  DFT_P03.json  DFT_P11.json  MDM_T01.json  MDM_T02.json  MDM_T04.json  MFN_M01.json  OML_O21.json  ORM_O01.json  ORU_R01.json  OUL_R21.json  QRY_A19.json  QRY_Q01.json  QRY_Q02.json  RAS_O17.json  RDE_O11.json  RDS_O13.json  RGV_O15.json  RRA_O18.json  RRD_O14.json  SIU_S12.json  (+3 more)
crates/rs7-validator/schemas/v2_4/: ACK.json  ADT_A01.json  ADT_A02.json  ADT_A03.json  ADT_A04.json  ADT_A05.json  ADT_A06.json  ADT_A07.json  ADT_A08.json  ADT_A09.json  ADT_A10.json  ADT_A11.json  ADT_A12.json  ADT_A13.json  ADT_A17.json  ADT_A28.json  ADT_A31.json  ADT_A40.json  BAR_P01.json  BAR_P02.json  DFT_P03.json  DFT_P11.json  MDM_T01.json  MDM_T02.json  MDM_T04.json  MFN_M01.json  OML_O21.json  ORM_O01.json  ORU_R01.json  OUL_R21.json  QRY_A19.json  QRY_Q01.json  QRY_Q02.json  RAS_O17.json  RDE_O11.json  RDS_O13.json  RGV_O15.json  RRA_O18.json  RRD_O14.json  SIU_S12.json  (+3 more)
crates/rs7-validator/src/: datatype.rs  lib.rs  rules.rs  schema_loader.rs  vocabulary.rs
crates/rs7-wasm/: Cargo.toml  README.md  package.json  rs7.d.ts
crates/rs7-wasm/examples/: browser.html
crates/rs7-wasm/src/: lib.rs  message.rs  terser.rs  utils.rs  validation.rs
crates/rs7-xml/: Cargo.toml
crates/rs7-xml/src/: decoder.rs  encoder.rs  error.rs  lib.rs
src/: lib.rs
(+177 files in other folders)
