[package]
name = "rs7"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Comprehensive HL7 v2.x library for Rust - parsing, validation, and MLLP support"

[features]
default = []
tls = ["rs7-mllp/tls"]
testing = ["rs7-mllp/testing"]

[dependencies]
rs7-core.workspace = true
rs7-parser.workspace = true
rs7-validator.workspace = true
rs7-terser.workspace = true
rs7-mllp.workspace = true

[[example]]
name = "mllp_tls_server"
required-features = ["tls"]

[[example]]
name = "mllp_tls_client"
required-features = ["tls"]

[[example]]
name = "e2e_benchmark"
required-features = ["testing"]

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
rs7-transform = { workspace = true, features = ["serde"] }
rs7-templates.workspace = true

[workspace]
members = [
    "crates/rs7-core",
    "crates/rs7-parser",
    "crates/rs7-validator",
    "crates/rs7-terser",
    "crates/rs7-transform",
    "crates/rs7-templates",
    "crates/rs7-mllp",
    "crates/rs7-http",
    "crates/rs7-macros",
    "crates/rs7-fhir",
    "crates/rs7-custom",
    "crates/rs7-conformance",
    "crates/rs7-orchestration",
    "crates/rs7-wasm",
    "crates/rs7-cli",
    "crates/rs7-xml",
    "crates/rs7-testpanel",
]
resolver = "2"

[workspace.package]
version = "0.22.0"
edition = "2024"
authors = ["Alex SHAO Fan <alex.shaofan@flostel.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/flostelinfotech/rs7"
homepage = "https://github.com/flostelinfotech/rs7"
documentation = "https://docs.rs/rs7"
keywords = ["hl7", "healthcare", "medical", "interoperability"]
categories = ["parsing", "network-programming", "healthcare"]

[workspace.dependencies]
# Parsing
nom = "8.0.0"

# Async runtime for MLLP
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization for specs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Regex
regex = "1.12"

# Date/Time handling
chrono = "0.4"

# WebAssembly
wasm-bindgen = "0.2"

# Testing
proptest = "1.9"

# Procedural macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Synchronization
once_cell = "1.21"

# Macro utilities
paste = "1.0"

# Internal crates
rs7-core = { version = "0.22.0", path = "crates/rs7-core" }
rs7-parser = { version = "0.22.0", path = "crates/rs7-parser" }
rs7-validator = { version = "0.22.0", path = "crates/rs7-validator" }
rs7-terser = { version = "0.22.0", path = "crates/rs7-terser" }
rs7-transform = { version = "0.22.0", path = "crates/rs7-transform" }
rs7-templates = { version = "0.22.0", path = "crates/rs7-templates" }
rs7-mllp = { version = "0.22.0", path = "crates/rs7-mllp" }
rs7-http = { version = "0.22.0", path = "crates/rs7-http" }
rs7-fhir = { version = "0.22.0", path = "crates/rs7-fhir" }
rs7-custom = { version = "0.22.0", path = "crates/rs7-custom" }
rs7-conformance = { version = "0.22.0", path = "crates/rs7-conformance" }
rs7-macros = { version = "0.22.0", path = "crates/rs7-macros" }
rs7-xml = { version = "0.22.0", path = "crates/rs7-xml" }

# XML
quick-xml = "0.38"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
