[package]
name = "rs7-conformance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HL7 v2.x conformance profile validation for RS7"

[dependencies]
# Internal crates
rs7-core.workspace = true
rs7-validator.workspace = true

# XML parsing
quick-xml = "0.36"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization/deserialization
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
rs7-parser.workspace = true
