[package]
name = "rs7-mllp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MLLP (Minimal Lower Layer Protocol) support for HL7 message transmission"

[dependencies]
rs7-core.workspace = true
rs7-parser.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Security - TLS/mTLS (optional)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
webpki-roots = { version = "1.0", optional = true }

[features]
default = []

# Security features
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots"]

# Testing features
testing = []

# Meta feature - enable all features
full = ["tls", "testing"]

[dev-dependencies]
