[package]
name = "rs7-orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Message routing, orchestration, and workflow engine for HL7 v2.x messages"

[dependencies]
rs7-core.workspace = true
rs7-terser.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
rs7-parser.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }
