[package]
name = "rs7-xml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["hl7", "healthcare", "xml", "encoding"]
categories.workspace = true
description = "XML encoding and decoding for HL7 v2.x messages"

[dependencies]
rs7-core.workspace = true
rs7-parser = { workspace = true, optional = true }
thiserror.workspace = true
quick-xml.workspace = true

[features]
default = []
# Enable ER7 <-> XML conversion functions
convert = ["rs7-parser"]
